[project]
name = "tensorprism-comfyui"
version = "1.1.0"
description = "Advanced model merging and enhancement nodes for ComfyUI with GPU-optimized memory management"
readme = "README.md"
authors = [
    {name = "AstrionX", email = "astrionx@example.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["comfyui", "stable-diffusion", "model-merging", "ai", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
]

[project.urls]
Homepage = "https://github.com/AstrionX/ComfyUI-Tensor-Prism-Node-Pack"
Repository = "https://github.com/AstrionX/ComfyUI-Tensor-Prism-Node-Pack"
Issues = "https://github.com/AstrionX/ComfyUI-Tensor-Prism-Node-Pack/issues"
Documentation = "https://github.com/AstrionX/ComfyUI-Tensor-Prism-Node-Pack/blob/main/README.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "__pycache__*", "*.pyc"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]